génération de la documentation swagger
